--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -32,6 +32,20 @@ body {
 	text-align: center;
 	box-shadow: 2px 2px 3px #999;
 }
+
+.floatText {
+	position: fixed;
+	width: 60px;
+	height: 60px;
+	bottom: 110px;
+	right: 110px;
+	background-color: #ff851b;
+	color: #fff;
+	border-radius: 50px;
+	text-align: center;
+	box-shadow: 2px 2px 3px #999;
+}
+
 #btns {
 	display: block;
 }
